--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="content_cancelled">Institution Id:\n%1$s\n\n Institution Name:\n%2$s\n\n Link Session Id:\n%3$s\n\n Status:\n%4$s</string>
     <string name="content_exit">Display Message:\n%1$s\n\n Error Code:\n%2$s\n\n Error Message:\n%3$s\n\n Institution Id:\n%4$s\n\n Institution Name:\n%5$s\n\n Status:\n%6$s</string>
     <string name="content_exception">Exception Class:\n%1$s\n\n Exception Message:\n%2$s</string>
+    <string name="title_activity_home">MainActivity</string>
+    <string name="title_home">Overview</string>
+    <string name="title_saved">Saved</string>
+    <string name="title_profile">Profile</string>
 </resources>
