Add budgets pulled from db and new tab

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Crystal</string>
     <string name="title_activity_home">MainActivity</string>
     <string name="title_home">Overview</string>
+    <string name="title_monthly">Overview</string>
     <string name="title_saved">Saved</string>
     <string name="title_profile">Profile</string>
 </resources>
